Use compact parameter format

--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -5,27 +5,18 @@ Description: >- # TODO
   tktktk
 
 Parameters:
-  EnvironmentType:
-    Type: String
+  EnvironmentType: { Type: String }
   KeyPairName:
     Type: AWS::EC2::KeyPair::KeyName
     Description: >-
       The EC2 key pair used for instances in the Auto Scaling
       group (region-specific)
-  # EnvironmentTypeAbbreviation:
-  #   Type: String
-  VpcId:
-    Type: AWS::EC2::VPC::Id
-  VpcPublicSubnet1Id:
-    Type: AWS::EC2::Subnet::Id
-  VpcPublicSubnet2Id:
-    Type: AWS::EC2::Subnet::Id
-  VpcPublicSubnet3Id:
-    Type: AWS::EC2::Subnet::Id
-  EcsClusterName:
-    Type: String
-  AlbTargetInstanceSecurityGroupId:
-    Type: AWS::EC2::SecurityGroup::Id
+  VpcId: { Type: "AWS::EC2::VPC::Id" }
+  VpcPublicSubnet1Id: { Type: "AWS::EC2::Subnet::Id" }
+  VpcPublicSubnet2Id: { Type: "AWS::EC2::Subnet::Id" }
+  VpcPublicSubnet3Id: { Type: "AWS::EC2::Subnet::Id" }
+  EcsClusterName: { Type: String }
+  AlbTargetInstanceSecurityGroupId: { Type: "AWS::EC2::SecurityGroup::Id" }
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
