--- a/stacks/shared-ecs-cluster.yml
+++ b/stacks/shared-ecs-cluster.yml
@@ -5,8 +5,7 @@ Description: >- # TODO
   tktktk
 
 Parameters:
-  EnvironmentType:
-    Type: String
+  EnvironmentType: { Type: String }
 
 Resources:
   EcsCluster:
