--- a/stacks/shared-vpc.yml
+++ b/stacks/shared-vpc.yml
@@ -10,16 +10,11 @@ Description: >-
   avoiding range overlaps.
 
 Parameters:
-  AwsOrganizationId:
-    Type: String
-  AvailabilityZoneSelectorServiceToken:
-    Type: String
-  EnvironmentType:
-    Type: String
-  TemplateUrlPrefix:
-    Type: String
-  CloudFormationNotificationArn:
-    Type: String
+  AwsOrganizationId: { Type: String }
+  AvailabilityZoneSelectorServiceToken: { Type: String }
+  EnvironmentType: { Type: String }
+  TemplateUrlPrefix: { Type: String }
+  CloudFormationNotificationArn: { Type: String }
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
