--- a/stacks/shared-vpc/flow-logs.yml
+++ b/stacks/shared-vpc/flow-logs.yml
@@ -4,10 +4,8 @@ AWSTemplateFormatVersion: "2010-09-09"
 Description: tktktk # TODO
 
 Parameters:
-  EnvironmentType:
-    Type: String
-  VpcId:
-    Type: AWS::EC2::VPC::Id
+  EnvironmentType: { Type: String }
+  VpcId: { Type: "AWS::EC2::VPC::Id" }
 
 Conditions:
   IsEnabled: !Equals [Enabled, Enabled] # TODO
