--- a/stacks/shared-vpc/gateway-endpoints.yml
+++ b/stacks/shared-vpc/gateway-endpoints.yml
@@ -4,12 +4,9 @@ AWSTemplateFormatVersion: "2010-09-09"
 Description: Gateway VPC endpoints
 
 Parameters:
-  VpcId:
-    Type: AWS::EC2::VPC::Id
-  PublicRouteTableId:
-    Type: String
-  PrivateRouteTableId:
-    Type: String
+  VpcId: { Type: "AWS::EC2::VPC::Id" }
+  PublicRouteTableId: { Type: String }
+  PrivateRouteTableId: { Type: String }
 
 Resources:
   S3Endpoint:
