--- a/stacks/shared-vpc/interface-endpoints.yml
+++ b/stacks/shared-vpc/interface-endpoints.yml
@@ -4,10 +4,8 @@ AWSTemplateFormatVersion: "2010-09-09"
 Description: Interface VPC endpoints
 
 Parameters:
-  VpcId:
-    Type: AWS::EC2::VPC::Id
-  PublicRouteTableId:
-    Type: String
+  VpcId: { Type: "AWS::EC2::VPC::Id" }
+  PublicRouteTableId: { Type: String }
   # PrivateRouteTableId:
   #   Type: String
 
