--- a/stacks/shared-vpc/public-subnets.yml
+++ b/stacks/shared-vpc/public-subnets.yml
@@ -4,18 +4,12 @@ AWSTemplateFormatVersion: "2010-09-09"
 Description: Public subnets for the VPC
 
 Parameters:
-  EnvironmentType:
-    Type: String
-  VpcId:
-    Type: AWS::EC2::VPC::Id
-  VpcCidrBlock:
-    Type: String
-  VpcIpv6CidrBlocks:
-    Type: CommaDelimitedList
-  AvailabilityZoneSelectorServiceToken:
-    Type: String
-  NetworkAclName:
-    Type: String
+  EnvironmentType: { Type: String }
+  VpcId: { Type: "AWS::EC2::VPC::Id" }
+  VpcCidrBlock: { Type: String }
+  VpcIpv6CidrBlocks: { Type: CommaDelimitedList }
+  AvailabilityZoneSelectorServiceToken: { Type: String }
+  NetworkAclName: { Type: String }
 
 Resources:
   AvailabilityZoneSelectorService:
