--- a/stacks/shared-vpc/public-network-acl.yml
+++ b/stacks/shared-vpc/public-network-acl.yml
@@ -4,10 +4,8 @@ AWSTemplateFormatVersion: "2010-09-09"
 Description: Public network ACL
 
 Parameters:
-  EnvironmentType:
-    Type: String
-  VpcId:
-    Type: AWS::EC2::VPC::Id
+  EnvironmentType: { Type: String }
+  VpcId: { Type: "AWS::EC2::VPC::Id" }
 
 Resources:
   PublicNetworkAcl:
