Clean up ALB template

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -811,6 +811,7 @@ Resources:
         VpcPublicSubnet2Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet2Id
         VpcPublicSubnet3Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet3Id
         NotificationsStackName: !Ref NotificationsStackName
+        EchoServiceToken: !GetAtt CustomResourcesStack.Outputs.EchoServiceToken
       Tags:
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
