Add new Grove stack

--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -19,6 +19,8 @@ Parameters:
   MetricsSecretsVersion: { Type: String }
   IframelyEcrImageTag: { Type: String }
   IframelySecretsVersion: { Type: String }
+  GroveEcrImageTag: { Type: String }
+  GroveSecretsVersion: { Type: String }
   PlayEcrImageTag: { Type: String }
   PlaySecretsVersion: { Type: String }
   SecretsStackName: { Type: String }
@@ -105,4 +107,23 @@ Resources:
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
       TemplateURL: !Sub ${TemplateUrlPrefix}/play.yml
+      TimeoutInMinutes: 5
+
+  GroveStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      Parameters:
+        AlbFullName: !Ref AlbFullName
+        AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
+        EcsClusterArn: !Ref EcsClusterArn
+        VpcId: !Ref VpcId
+        SecretsBase: !Ref SecretsBase
+        EcrImageTag: !Ref GroveEcrImageTag
+        SecretsVersion: !Ref GroveSecretsVersion
+        EcrRegion: !Ref EcrRegion
+        SecretsStackName: !Ref SecretsStackName
+        NotificationsStackName: !Ref NotificationsStackName
+        EnvironmentType: !Ref EnvironmentType
+        EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+      TemplateURL: !Sub ${TemplateUrlPrefix}/grove.yml
       TimeoutInMinutes: 5
