Add Styleguide stack

--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -23,6 +23,8 @@ Parameters:
   GroveSecretsVersion: { Type: String }
   PlayEcrImageTag: { Type: String }
   PlaySecretsVersion: { Type: String }
+  StyleguideEcrImageTag: { Type: String }
+  StyleguideSecretsVersion: { Type: String }
   SecretsStackName: { Type: String }
   NotificationsStackName: { Type: String }
   UploadSigningUserName: { Type: String }
@@ -126,4 +128,23 @@ Resources:
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
       TemplateURL: !Sub ${TemplateUrlPrefix}/grove.yml
+      TimeoutInMinutes: 5
+
+  StyleguideStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      Parameters:
+        AlbFullName: !Ref AlbFullName
+        AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
+        EcsClusterArn: !Ref EcsClusterArn
+        VpcId: !Ref VpcId
+        SecretsBase: !Ref SecretsBase
+        EcrImageTag: !Ref StyleguideEcrImageTag
+        SecretsVersion: !Ref StyleguideSecretsVersion
+        EcrRegion: !Ref EcrRegion
+        SecretsStackName: !Ref SecretsStackName
+        NotificationsStackName: !Ref NotificationsStackName
+        EnvironmentType: !Ref EnvironmentType
+        EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+      TemplateURL: !Sub ${TemplateUrlPrefix}/styleguide.yml
       TimeoutInMinutes: 5
