--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -878,6 +878,9 @@ Resources:
         GroveEcrImageTag: !Ref GroveEcrImageTag
         GroveSecretsVersion: !Ref GroveSecretsVersion
 
+        StyleguideEcrImageTag: !Ref StyleguideEcrImageTag
+        StyleguideSecretsVersion: !Ref StyleguideSecretsVersion
+
         TemplateUrlPrefix: !Join ["", ["https://", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", !Sub ".s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}", "/stacks/provisioned"]]
         AlbFullName: !GetAtt SharedAlbStack.Outputs.AlbFullName
         AlbHttpsListenerArn: !GetAtt SharedAlbStack.Outputs.HttpsListenerArn
