Add task def commands

--- a/stacks/provisioned/grove.yml
+++ b/stacks/provisioned/grove.yml
@@ -170,7 +170,9 @@ Resources:
     Type: AWS::ECS::TaskDefinition
     Properties:
       ContainerDefinitions:
-        - Cpu: 100 # TODO
+        - Command:
+            - web
+          Cpu: 100 # TODO
           Environment:
             - Name: APP_NAME
               Value: grove
