--- a/stacks/custom-resources.yml
+++ b/stacks/custom-resources.yml
@@ -235,9 +235,9 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       Description: >-
-        Provides information about the availability zones that can and should
-        be used for the current region, including a list of zone names, and the
-        count of allowed zones
+        Returns any resource properties as outputs. This can be useful when a
+        derived value needs to be used several times within a template, but is
+        not available via Fn::Ref or Fn::GetAtt from any other resource.
       Handler: index.lambda_handler
       InlineCode: |
         import cfnresponse
