--- a/stacks/provisioned/publish.yml
+++ b/stacks/provisioned/publish.yml
@@ -221,6 +221,8 @@ Resources:
           Value: !Ref AWS::StackId
       TaskRoleArn: !GetAtt TaskRole.Arn
 
+  # S3 bucket where Publish uploads files for temp storage before they are
+  # copied to a permanent location in another bucket
   PublishUploadsBucket:
     Type: AWS::S3::Bucket
     DeletionPolicy: Retain
@@ -290,6 +292,8 @@ Resources:
       Users:
         - !Ref UploadSigningUserName
 
+  # Publish briefly needs access to uploads in their temp location; this
+  # CloudFront distribution provides public access to the not-public bucket
   CloudFrontCachePolicy:
     Type: AWS::CloudFront::CachePolicy
     Properties:
