Remove unnecessary quotes

--- a/stacks/shared-vpc.yml
+++ b/stacks/shared-vpc.yml
@@ -58,7 +58,7 @@ Resources:
           - Action: sts:AssumeRole
             Condition:
               StringEquals:
-                "aws:PrincipalOrgID": !Ref AwsOrganizationId
+                aws:PrincipalOrgID: !Ref AwsOrganizationId
             Effect: Allow
             Principal:
               AWS: "*"
