--- a/stacks/shared-memcached.yml
+++ b/stacks/shared-memcached.yml
@@ -1,7 +1,7 @@
 # stacks/shared-memcached.yml
 AWSTemplateFormatVersion: "2010-09-09"
 
-Description: >-
+Description: >- # TODO
   Launches stacks for a number of applications and services that are maintained
   in separate templates.
 
