--- a/stacks/custom-resources.yml
+++ b/stacks/custom-resources.yml
@@ -4,10 +4,8 @@ Transform: AWS::Serverless-2016-10-31
 Description: Provides services to be used as CloudFormation custom resources
 
 Parameters:
-  EnvironmentType:
-    Type: String
-  StorageStackName:
-    Type: String
+  EnvironmentType: { Type: String }
+  StorageStackName: { Type: String }
 
 Resources:
   AmazonSesSmtpCredentialsGeneratorFunction:
