Cleanup template URL

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -229,7 +229,11 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
-      TemplateURL: !Join ["", ["https://", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", !Sub ".s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}", "/stacks/custom-resources.yml"]]
+      TemplateURL:
+        Fn::Sub:
+          - https://${SourceBucketName}.s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}/stacks/custom-resources.yml
+          - SourceBucketName:
+              Fn::ImportValue: !Sub ${InfrastructureStorageStackName}-InfrastructureSourceBucket
       TimeoutInMinutes: 5
 
   Constants:
