Cleanup tags and notifications

--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -5,6 +5,7 @@ Description: Provisioned apps # TODO
 
 Parameters:
   TemplateUrlPrefix: { Type: String }
+  CloudFormationNotificationArn: { Type: String }
   AlbFullName: { Type: String }
   AlbHttpsListenerArn: { Type: String }
   EcsClusterArn: { Type: String }
@@ -35,6 +36,8 @@ Resources:
   MetricsStack:
     Type: AWS::CloudFormation::Stack
     Properties:
+      NotificationARNs:
+        - !Ref CloudFormationNotificationArn
       Parameters:
         AlbFullName: !Ref AlbFullName
         AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
@@ -48,12 +51,21 @@ Resources:
         NotificationsStackName: !Ref NotificationsStackName
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+      Tags:
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: prx:cloudformation:stack-name
+          Value: !Ref AWS::StackName
+        - Key: prx:cloudformation:stack-id
+          Value: !Ref AWS::StackId
       TemplateURL: !Sub ${TemplateUrlPrefix}/metrics.yml
       TimeoutInMinutes: 5
 
   PublishStack:
     Type: AWS::CloudFormation::Stack
     Properties:
+      NotificationARNs:
+        - !Ref CloudFormationNotificationArn
       Parameters:
         AlbFullName: !Ref AlbFullName
         AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
@@ -70,12 +82,21 @@ Resources:
         UploadSigningUserName: !Ref UploadSigningUserName
         UploadSigningEndpointUrl: !Ref UploadSigningEndpointUrl
         UploadSigningAccessKeyId: !Ref UploadSigningAccessKeyId
+      Tags:
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: prx:cloudformation:stack-name
+          Value: !Ref AWS::StackName
+        - Key: prx:cloudformation:stack-id
+          Value: !Ref AWS::StackId
       TemplateURL: !Sub ${TemplateUrlPrefix}/publish.yml
       TimeoutInMinutes: 20
 
   IframelyStack:
     Type: AWS::CloudFormation::Stack
     Properties:
+      NotificationARNs:
+        - !Ref CloudFormationNotificationArn
       Parameters:
         AlbFullName: !Ref AlbFullName
         AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
@@ -89,12 +110,21 @@ Resources:
         NotificationsStackName: !Ref NotificationsStackName
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+      Tags:
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: prx:cloudformation:stack-name
+          Value: !Ref AWS::StackName
+        - Key: prx:cloudformation:stack-id
+          Value: !Ref AWS::StackId
       TemplateURL: !Sub ${TemplateUrlPrefix}/iframely.yml
       TimeoutInMinutes: 5
 
   PlayStack:
     Type: AWS::CloudFormation::Stack
     Properties:
+      NotificationARNs:
+        - !Ref CloudFormationNotificationArn
       Parameters:
         AlbFullName: !Ref AlbFullName
         AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
@@ -108,12 +138,21 @@ Resources:
         NotificationsStackName: !Ref NotificationsStackName
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+      Tags:
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: prx:cloudformation:stack-name
+          Value: !Ref AWS::StackName
+        - Key: prx:cloudformation:stack-id
+          Value: !Ref AWS::StackId
       TemplateURL: !Sub ${TemplateUrlPrefix}/play.yml
       TimeoutInMinutes: 5
 
   GroveStack:
     Type: AWS::CloudFormation::Stack
     Properties:
+      NotificationARNs:
+        - !Ref CloudFormationNotificationArn
       Parameters:
         AlbFullName: !Ref AlbFullName
         AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
@@ -127,12 +166,21 @@ Resources:
         NotificationsStackName: !Ref NotificationsStackName
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+      Tags:
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: prx:cloudformation:stack-name
+          Value: !Ref AWS::StackName
+        - Key: prx:cloudformation:stack-id
+          Value: !Ref AWS::StackId
       TemplateURL: !Sub ${TemplateUrlPrefix}/grove.yml
       TimeoutInMinutes: 5
 
   StyleguideStack:
     Type: AWS::CloudFormation::Stack
     Properties:
+      NotificationARNs:
+        - !Ref CloudFormationNotificationArn
       Parameters:
         AlbFullName: !Ref AlbFullName
         AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
@@ -146,5 +194,12 @@ Resources:
         NotificationsStackName: !Ref NotificationsStackName
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+      Tags:
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: prx:cloudformation:stack-name
+          Value: !Ref AWS::StackName
+        - Key: prx:cloudformation:stack-id
+          Value: !Ref AWS::StackId
       TemplateURL: !Sub ${TemplateUrlPrefix}/styleguide.yml
       TimeoutInMinutes: 5
