Add missing tag

--- a/stacks/shared-vpc.yml
+++ b/stacks/shared-vpc.yml
@@ -197,6 +197,8 @@ Resources:
         PublicRouteTableId: !GetAtt PublicSubnetsStack.Outputs.RouteTableId
         # PrivateRouteTableId: !GetAtt PrivateSubnetsStack.Outputs.RouteTableId
       Tags:
+        - Key: Environment
+          Value: !Ref EnvironmentType
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
