Add root stack outputs

--- a/stacks/shared-vpc.yml
+++ b/stacks/shared-vpc.yml
@@ -50,7 +50,7 @@ Resources:
       VpcId: !Ref Vpc
 
   # VPC peering
-  VpcPeeringOrgTrustingRole:
+  OrganizationVpcPeeringAccepterRole:
     Type: AWS::IAM::Role
     Properties:
       AssumeRolePolicyDocument:
@@ -65,14 +65,14 @@ Resources:
       Policies:
         - PolicyName: PeeringConnectionPolicy
           PolicyDocument:
-            Version: "2012-10-17"
             Statement:
               - Action: ec2:AcceptVpcPeeringConnection
                 Effect: Allow
-                Resource: "*"
+                Resource: "*" # arn:${Partition}:ec2:${Region}:${Account}:vpc-peering-connection/${VpcPeeringConnectionId}
+            Version: "2012-10-17"
       Tags:
         - Key: Project
-          Value: platform.prx.org
+          Value: platform.prx.org # TODO
         - Key: Environment
           Value: !Ref EnvironmentType
         - Key: prx:cloudformation:stack-name
@@ -288,3 +288,7 @@ Outputs:
   PrivateSubnet3Az:
     Description: AZ of private subnet 1
     Value: !GetAtt PrivateSubnetsStack.Outputs.Subnet3AZ
+
+  OrganizationVpcPeeringAccepterRoleArn:
+    Description: IAM role ARN for the VPC peering accepter role
+    Value: !GetAtt OrganizationVpcPeeringAccepterRole.Arn
